fix icon visibility for vertical tabs

--- a/tabby-core/src/components/tabHeader.component.scss
+++ b/tabby-core/src/components/tabHeader.component.scss
@@ -3,7 +3,7 @@ $tabs-height: 38px;
 :host {
     position: relative;
     cursor: pointer;
-    box-sizing: content-box;
+    box-sizing: border-box;
 
     > * { cursor: pointer; }
 
